--- a/jup.ipynb
+++ b/jup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,23 @@
     "from sklearn.metrics import accuracy_score\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\")"
    ]
   },
   {
